--- a/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,7 +30,7 @@
         tools:layout="@layout/show_alcohol_fragment" />
     <fragment
         android:id="@+id/nav_drinks"
-        android:name="com.example.alkoapp.ui.showdrinks.ShowDrinksFragment"
+        android:name="com.example.alkoapp.ui.showalcohol.ShowAlcoholFragment"
 
         android:label="@string/menu_drinks"
         tools:layout="@layout/show_drinks_fragment" />
