--- a/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     tools:context=".ui.onealco.OneAlcoFragment">
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="alcohol"
+            type="com.example.alkoapp.data.models.Alcohol" />
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,10 +29,11 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/alcohol_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
+                android:text="@{alcohol.name}"
                 tools:text="AlcoholName" />
 
         </TableRow>
@@ -47,8 +54,8 @@
                 android:id="@+id/alcohol_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                tools:text="AlcoholType" />
+                tools:text="AlcholType"
+                android:text="@{alcohol.type.toString()}" />
 
         </TableRow>
 
