--- a/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
@@ -72,25 +72,25 @@
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="@{alcohol.producer}" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="@{alcohol.production_country}" />
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="@{alcohol.alcohol_content}" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="@{alcohol.description}" />
         </LinearLayout>
 
     </LinearLayout>
