--- a/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
@@ -1,38 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp">
 
-    <TableLayout
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    tools:context=".ui.onedrink.OneDrinkFragment">
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="drink"
+            type="com.example.alkoapp.data.models.Drink" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
+            <Space
+                android:layout_width="60dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/alcohol_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:src="@tools:sample/avatars" />
+
+                android:text="@{drink.name}"
+                tools:text="AlcoholName" />
 
         </TableRow>
 
-        <TableRow
+        <Space
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="20dp" />
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content">
 
-        <TableRow
+            <Space
+                android:layout_width="60dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/alcohol_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="AlcholType"
+                android:text="@{drink.description}" />
+
+        </TableRow>
+
+        <Space
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </TableLayout>
-</RelativeLayout>
+            android:layout_height="80dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{drink.glass}" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{drink.stuff.toString()}" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{drink.instruction}" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{drink.how_to_serve}" />
+        </LinearLayout>
+
+    </LinearLayout>
+</layout>
