--- a/AlkoApp/app/src/main/res/layout/recycler_view_alcohol.xml
+++ b/AlkoApp/app/src/main/res/layout/recycler_view_alcohol.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="0dp">
 
 
     <androidx.cardview.widget.CardView
@@ -22,7 +22,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 tools:src="@tools:sample/avatars"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@tools:sample/avatars"
+                android:contentDescription="TODO" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
