--- a/AlkoApp/app/src/main/res/layout/fragment_add_alcohol.xml
+++ b/AlkoApp/app/src/main/res/layout/fragment_add_alcohol.xml
@@ -25,6 +25,32 @@
             app:titleMarginStart="32dp" />
 
         <TextView
+            android:id="@+id/name_label"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
+            android:text="Name:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addAlcoholToolbar" />
+
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="24dp"
+            android:textAlignment="textEnd"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.238"
+            app:layout_constraintStart_toEndOf="@+id/type_label"
+            app:layout_constraintTop_toBottomOf="@+id/addAlcoholToolbar" />
+
+        <TextView
             android:id="@+id/type_label"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
@@ -34,7 +60,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addAlcoholToolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/name_label" />
 
         <Spinner
             android:id="@+id/type_spinner"
@@ -48,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.238"
             app:layout_constraintStart_toEndOf="@+id/type_label"
-            app:layout_constraintTop_toBottomOf="@+id/addAlcoholToolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/name" />
 
         <TextView
             android:id="@+id/alcohol_content_label"
