--- a/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
@@ -5,8 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     tools:context=".ui.onealco.OneAlcoFragment">
+
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
             name="alcohol"
             type="com.example.alkoapp.data.models.Alcohol" />
@@ -159,6 +162,31 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/description_label"
             app:layout_constraintTop_toBottomOf="@+id/producer" />
+
+        <TextView
+            android:id="@+id/ratings_label"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="Ratings:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/description_label" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ratings_label"
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/recycler_opinion" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
