--- a/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
@@ -32,6 +32,16 @@
             app:title="@{alcohol.name}"
             app:titleMarginEnd="4dp" />
 
+        <ImageButton
+            android:id="@+id/favouriteButton"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/transparent"
+            android:src="@android:drawable/btn_star"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar_alcohol_header"
+            app:layout_constraintEnd_toEndOf="@+id/toolbar_alcohol_header"
+            app:layout_constraintTop_toTopOf="@+id/toolbar_alcohol_header" />
+
         <TextView
             android:id="@+id/type_label"
             android:layout_width="wrap_content"
