--- a/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_alco_fragment.xml
@@ -186,6 +186,7 @@
             app:layout_constraintTop_toBottomOf="@+id/description_label" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/alcohol_rate_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
