--- a/AlkoApp/app/src/main/res/layout/recycler_opinion.xml
+++ b/AlkoApp/app/src/main/res/layout/recycler_opinion.xml
@@ -30,7 +30,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/rate_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -41,7 +41,7 @@
                 tools:text="Author Author" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/rate_value"
                 android:layout_width="wrap_content"
                 android:layout_height="82dp"
                 android:layout_marginTop="16dp"
