--- a/AlkoApp/app/src/main/res/layout/fragment_add_alcohol.xml
+++ b/AlkoApp/app/src/main/res/layout/fragment_add_alcohol.xml
@@ -37,7 +37,7 @@
             app:layout_constraintTop_toBottomOf="@+id/addAlcoholToolbar" />
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/alco_add_name"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_marginStart="24dp"
@@ -74,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.238"
             app:layout_constraintStart_toEndOf="@+id/type_label"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintTop_toBottomOf="@+id/alco_add_name" />
 
         <TextView
             android:id="@+id/alcohol_content_label"
