add drink layout

--- a/AlkoApp/app/src/main/res/layout/show_drinks_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/show_drinks_fragment.xml
@@ -7,6 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".ui.showdrinks.ShowDrinksFragment">
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addDrinkButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@android:drawable/ic_menu_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
