--- a/AlkoApp/app/src/main/res/values/colors.xml
+++ b/AlkoApp/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00A0B0</color>
+    <color name="colorPrimary">#A00000</color>
     <color name="colorPrimaryDark">#AF0000</color>
     <color name="colorAccent">#00AA80</color>
 </resources>
