showing average ratings

--- a/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
@@ -180,7 +180,31 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/instruction_label" />
+            app:layout_constraintTop_toBottomOf="@+id/instruction" />
+
+        <TextView
+            android:id="@+id/average_rating_label"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="4dp"
+            android:text="Average:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/average_rating"
+            app:layout_constraintTop_toBottomOf="@+id/instruction" />
+
+        <TextView
+            android:id="@+id/average_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:text="@{drink.average_rating}"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/instruction" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
