--- a/AlkoApp/app/src/main/res/layout/fragment_add_alcohol.xml
+++ b/AlkoApp/app/src/main/res/layout/fragment_add_alcohol.xml
@@ -187,7 +187,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/side_nav_bar"
+            android:background="@color/colorPrimaryDark"
             android:text="Add"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
