--- a/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
@@ -27,7 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:title="@{drink.name}"
-            app:titleMarginEnd="4dp" />
+            app:titleMarginEnd="32dp" />
 
         <ImageButton
             android:id="@+id/favouriteButton"
@@ -35,9 +35,19 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/transparent"
             android:src="@android:drawable/btn_star"
-            app:layout_constraintBottom_toBottomOf="@+id/toolbar_drink_header"
-            app:layout_constraintEnd_toEndOf="@+id/toolbar_drink_header"
-            app:layout_constraintTop_toTopOf="@+id/toolbar_drink_header" />
+            app:layout_constraintBottom_toBottomOf="@id/toolbar_drink_header"
+            app:layout_constraintEnd_toStartOf="@id/deleteButton"
+            app:layout_constraintTop_toTopOf="@id/toolbar_drink_header" />
+
+        <ImageButton
+            android:id="@+id/deleteButton"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/transparent"
+            android:src="@android:drawable/ic_delete"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar_drink_header"
+            app:layout_constraintEnd_toEndOf="@id/toolbar_drink_header"
+            app:layout_constraintTop_toTopOf="@id/toolbar_drink_header" />
 
         <TextView
             android:id="@+id/glass_label"
