full form for adding drinks

--- a/AlkoApp/app/src/main/res/layout/add_alcohol_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/add_alcohol_fragment.xml
@@ -187,9 +187,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginTop="32dp"
             android:background="@color/colorPrimaryDark"
             android:text="Add"
             android:textSize="24sp"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
