--- a/AlkoApp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AlkoApp/app/src/main/res/menu/activity_main_drawer.xml
@@ -40,7 +40,7 @@
             <item
                 android:id="@+id/nav_tools"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="@string/menu_tools" />
+                android:title="@string/menu_account" />
         </menu>
     </item>
 
