--- a/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,9 +19,9 @@
 
     <fragment
         android:id="@+id/nav_tools"
-        android:name="com.example.alkoapp.ui.tools.ToolsFragment"
-        android:label="@string/menu_tools"
-        tools:layout="@layout/fragment_tools" />
+        android:name="com.example.alkoapp.ui.account.AccountFragment"
+        android:label="@string/menu_account"
+        tools:layout="@layout/fragment_account" />
 
     <fragment
         android:id="@+id/nav_alcoshow"
