--- a/AlkoApp/app/src/main/res/layout/add_drink_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/add_drink_fragment.xml
@@ -50,7 +50,7 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/name_label"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/addDrinkToolbar" />
 
         <TextView
             android:id="@+id/description_label"
